# rust-genai-tools

./: LICENSE-MIT  README.md  cargo.toml
genai-tools/: Cargo.toml
genai-tools-macros/: Cargo.toml
genai-tools-macros/src/: lib.rs
genai-tools/examples/: comparison.rs  weather_tool.rs
genai-tools/src/: lib.rs  macros.rs  registry.rs  traits.rs
genai-tools/tests/: integration.rs
