[package]
name = "genai-tools"
version = "0.3.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Type-safe tool definition macros for genai"
keywords = ["genai", "llm", "tools", "macros", "schema"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0.0-alpha.20", features = ["derive"] }

# Proc macro dependency
genai-tools-macros = { path = "../genai-tools-macros" }

# Integration with main genai crate
genai = { version = "0.3.5" }

# Async support
tokio = { version = "1", features = ["macros"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
thiserror = "2.0" 
